samples/_failures_safe/1761090540_7ffada_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be2f1b7c.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_be2f1b7c.c:125:10: error: ‘matrix’ undeclared (first use in this function); did you mean ‘Matrix’?
  125 |     if (!matrix
      |          ^~~~~~
      |          Matrix
./samples/SAFE/__tmp_be2f1b7c.c:125:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_be2f1b7c.c:125:16: error: expected ‘)’ at end of input
  125 |     if (!matrix
      |        ~       ^
      |                )
./samples/SAFE/__tmp_be2f1b7c.c:125:5: error: expected declaration or statement at end of input
  125 |     if (!matrix
      |     ^~
